--- a/client/to-do.html
+++ b/client/to-do.html
@@ -31,6 +31,6 @@
     </footer>
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="javascripts/to-blue.js"></script>
+    <script src="client/javascripts/to-do.js"></script>
   </body>
 </html>
