--- a/client/to-do-XC.html
+++ b/client/to-do-XC.html
@@ -28,9 +28,10 @@
 
       <section class="comments">
         <p>List of comments</p>
-        <p>Start P4 early</p>
-        <p>Review for Midterm F 5/6</p>
-        <p>Memorial Day plans 5/30</p>
+        <p>aaa</p>
+        <p>bb</p>
+        <p>c</p>
+        <p>dddd</p>
       </section>
     </main>
 
