--- a/client/to-do.html
+++ b/client/to-do.html
@@ -3,7 +3,7 @@
   <head>
     <title>A Simple App</title>
 
-    <link href="project-4-jchacko15-master/client/stylesheets/to-do.css" rel="stylesheet" type="text/css">
+    <link href="stylesheets/to-do.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -31,6 +31,6 @@
     </footer>
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="project-4-jchacko15-master/client/javascripts/to-do.js"></script>
+    <script src="javascripts/to-do.js"></script>
   </body>
 </html>
