--- a/client/to-do-XC.html
+++ b/client/to-do-XC.html
@@ -3,7 +3,7 @@
   <head>
     <title>A Simple App</title>
 
-    <link href="project-4-jchacko15-master/client/stylesheets/to-do-XC.css" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/to-do-XC.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -36,6 +36,6 @@
     </main>
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="project-4-jchacko15-master/client/javascripts/to-do-XC.js"></script>
+    <script src="javascripts/to-do-XC.js"></script>
   </body>
 </html>
